# lia

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  mprocs.yaml  package.json
api/: Cargo.toml
api/migrations/: 20240101000001_add_ip_address.sql  20240101000002_create_guild_tasks.sql
api/src/: db.rs  error.rs  handlers.rs  models.rs  qemu.rs  vsock.rs  ws.rs
api/tests/: qemu_integration_test.rs  ssh_integration_test.rs
cli/: Cargo.toml
cli/src/: api.rs  main.rs
config/: default.toml
docs/: agent-sidecar.md  claude-cli.md  database.md  discord-bot.md  shared.md  vm-api.md  vm-infrastructure.md  vm-processes.md  web-ui.md
services/vm-api/: Cargo.toml
services/vm-api/config/: default.toml  local.toml.example
services/vm-api/migrations/: 20240101000000_create_tasks.sql  20240101000003_add_source_and_repositories.sql
services/vm-api/src/: config.rs  db.rs  error.rs  firecracker.rs  handlers.rs  main.rs  models.rs  qemu.rs  vsock.rs  ws.rs
services/vm-api/tests/: claude_streaming_test.rs  ssh_integration_test.rs
vm/: setup-all.sh  setup.sh
vm/agent-sidecar/: Cargo.toml
vm/agent-sidecar/src/: main.rs
vm/kernel/: download-kernel.sh
vm/rootfs/: build-rootfs.sh
