[package]
name = "lia-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lia"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
