[package]
name = "vm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Firecracker interaction
nix = { version = "0.28", features = ["process", "signal", "socket", "net"] }
libc = "0.2"

# HTTP client (for Firecracker API)
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["client", "http1"] }
hyperlocal = "0.8"

# Utilities
rand = "0.8"
base64 = "0.21"

[dev-dependencies]
# SSH client for integration tests
ssh2 = "0.9"
tempfile = "3"
libc = "0.2"

[[test]]
name = "ssh_integration_test"
path = "tests/ssh_integration_test.rs"

[[test]]
name = "claude_streaming_test"
path = "tests/claude_streaming_test.rs"
